--- a/WPF Panel logowania/PanelUzytkownika.xaml
+++ b/WPF Panel logowania/PanelUzytkownika.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Panel_logowania"
         mc:Ignorable="d"
-        Title="Panel użytkownika" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+        Title="Panel użytkownika" Height="300" Width="700">
+	<Grid Margin="10">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="8*"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
+
+		<Button x:Name="btnWyloguj" Content="Wyloguj" Grid.Column="0" HorizontalAlignment="Center" Margin="1,2,0,0" Grid.Row="1" VerticalAlignment="Center" Width="75" Click="btnWyloguj_Click" />
+		<DataGrid Name="DataGridOfPeople" HorizontalAlignment="Center" Height="auto" Margin="10,10,0,0" VerticalAlignment="Top" Width="550"/>
+	</Grid>
 </Window>
