--- a/WPF Panel logowania/MainWindow.xaml
+++ b/WPF Panel logowania/MainWindow.xaml
@@ -23,7 +23,7 @@
 		<TextBlock Grid.Row="2" VerticalAlignment="Center">Hasło</TextBlock>
 		<TextBox x:Name="txbLogin" HorizontalAlignment="Left" Height="24" Margin="0,18,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
 		<TextBox x:Name="txbHaslo" HorizontalAlignment="Left" Height="24" Margin="0,62,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-		<Button x:Name="btnRejestracja" Content="Rejestracja" Grid.Column="3" HorizontalAlignment="Center" Margin="25,42,0,0" Grid.Row="2" VerticalAlignment="Bottom" Width="75" Click="btnWyjscie_Click"/>
-		<Button x:Name="btnZaloguj" Content="Zaloguj" Grid.Column="2" HorizontalAlignment="Center" Margin="21,52,0,0" Grid.Row="2" VerticalAlignment="Bottom" Width="75" Click="btnZaloguj_Click"/>
+		<Button x:Name="btnRejestracja" Content="Rejestracja" Grid.Column="3" HorizontalAlignment="Center" Margin="25,42,0,0" Grid.Row="2" VerticalAlignment="Bottom" Width="75" Click="btnRegistration_Click"/>
+		<Button x:Name="btnZaloguj" Content="Zaloguj" Grid.Column="2" HorizontalAlignment="Center" Margin="21,52,0,0" Grid.Row="2" VerticalAlignment="Bottom" Width="75" Click="btnLogining_Click"/>
 	</Grid>
 </Window>
