--- a/WPF Panel logowania/Rejestracja.xaml
+++ b/WPF Panel logowania/Rejestracja.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Panel_logowania"
         mc:Ignorable="d"
-        Title="Dane użytkownika" Height="300" Width="400">
+        Title="Dane użytkownika" Height="300" Width="500">
 	<Grid Margin="10">
 		<Grid.RowDefinitions>
 			<RowDefinition />
@@ -47,7 +47,7 @@
 		<TextBox x:Name="txbRejAdres" HorizontalAlignment="Left" Height="24" Margin="0,2,0,0" Grid.Row="5" Grid.Column="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
 		<TextBox x:Name="txbRejEmail" HorizontalAlignment="Left" Height="24" Margin="0,2,0,0" Grid.Row="6" Grid.Column="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
 
-		<Button x:Name="btnZapisz" Content="Zapisz" Grid.Column="3" HorizontalAlignment="Left" Margin="5,0,5,0" Grid.Row="7" VerticalAlignment="Center" Width="81" Height="25" RenderTransformOrigin="0,0" Click="btnSave_Click" Grid.ColumnSpan="2" >
+		<Button x:Name="btnZapisz" Content="Zapisz" Grid.Column="3" HorizontalAlignment="Center" Margin="5,0,5,0" Grid.Row="7" VerticalAlignment="Center" Width="81" Height="25" RenderTransformOrigin="0,0" Click="btnSave_Click" Grid.ColumnSpan="2" >
 			<Button.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleY="1"/>
